导航栏和右侧部分的一点点

--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- 引入图片字体库 -->
+	<link rel="stylesheet" type="text/css" href="fa/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/leadBox.css">
+    <link rel="stylesheet" href="css/leftBox.css">
+    <script src="js/leadBox.js"></script>
+    <script src="js/leftBox.js"></script>
 </head>
 <body>
-    hello 
+    <div class="mainBox">
+        <div class="leadBox">
+            <span>Fantasylive</span>
+            <ul>
+                <li>lead1</li>
+                <li>lead2</li>
+                <li>lead3</li>
+                <li>lead4</li>
+            </ul>
+        </div>
+        <div class="leftBox">
+            <div class="search">
+                <input type="text" placeholder="Serch">
+                <div><i class="fa">&#xf002;</i></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
