--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 	<link rel="stylesheet" type="text/css" href="fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/leadBox.css">
     <link rel="stylesheet" href="css/leftBox.css">
-    <script src="js/leadBox.js"></script>
-    <script src="js/leftBox.js"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 <body>
     <div class="mainBox">
         <div class="leadBox">
             <span>Fantasylive</span>
             <ul>
-                <li>lead1</li>
-                <li>lead2</li>
-                <li>lead3</li>
-                <li>lead4</li>
+                <li><a href="javascript:;">lead1</a></li>
+                <li><a href="javascript:;">lead1</a></li>
+                <li><a href="javascript:;">lead1</a></li>
+                <li><a href="javascript:;">lead1</a></li>
             </ul>
         </div>
         <div class="leftBox">
@@ -28,6 +27,55 @@
                 <input type="text" placeholder="Serch">
                 <div><i class="fa">&#xf002;</i></div>
             </div>
+            <div class="left_part1 left_part_common">
+                <h1>Menu</h1>
+                <ul>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                    <li><a href="javascript:;">HOMEPAGE</a></li>
+                </ul>
+            </div>
+            <div class="left_part2 left_part_common">
+                <h1>Ante interdum</h1>
+                <ul>
+                    <li>
+                        <a href="javascript:;"><img src="img/Violet01.jpg" alt="Violet"></a>
+                        <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+                    </li>
+                    <li>
+                        <a href="javascript:;"><img src="img/Violet02.jpg" alt="Violet"></a>
+                        <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+                    </li>
+                    <li>
+                        <a href="javascript:;"><img src="img/Violet03.jpg" alt="Violet"></a>
+                        <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+                        <button>MORE</button>
+                    </li>
+                </ul>
+            </div>
+            <div class="left_part3 left_part_common">
+                <h1>Get in touch</h1>
+                <ul>
+                    <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                    <li>
+                        <i class="fa">&#xf0e0;</i><a href="javascript:;">information@untitled.tld</a>
+                    </li>
+                    <li>
+                        <i class="fa">&#xf095;</i><a href="javascript:;">(000) 000-0000</a>
+                    </li>
+                    <li>
+                        <i class="fa">&#xf015;</i><a href="javascript:;">1234 Somewhere Road #8254Nashville, TN 00000-0000</a>
+                    </li>
+                </ul>
+            </div>
+            <p class="copyright left_part_common">© Untitled. All rights reserved. Demo Images: Violet. Design: HTML5 UP. Cover: fantasylive</p>
         </div>
     </div>
 </body>
