基础静态页面完成

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="fa/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/leadBox.css">
     <link rel="stylesheet" href="css/leftBox.css">
+    <link rel="stylesheet" href="css/rightBox.css">
+    <link rel="stylesheet" href="css/common.css">
     <script type="module" src="js/main.js"></script>
 </head>
 <body>
@@ -22,10 +24,11 @@
                 <li><a href="javascript:;">lead1</a></li>
             </ul>
         </div>
+        <div class="container">
         <div class="leftBox">
             <div class="search">
                 <input type="text" placeholder="Serch">
-                <div><i class="fa">&#xf002;</i></div>
+                <a href="javascript:;"><i class="fa">&#xf002;</i></a>
             </div>
             <div class="left_part1 left_part_common">
                 <h1>Menu</h1>
@@ -77,6 +80,102 @@
             </div>
             <p class="copyright left_part_common">© Untitled. All rights reserved. Demo Images: Violet. Design: HTML5 UP. Cover: fantasylive</p>
         </div>
+        <div class="rightBox">
+            <a href="javascript:;"><i class="fa">&#xf0c9;</i></a>
+            <div class="right_main">
+                <div class="right_main_part1">
+                    <h1><span>Editorial</span> by Fantasylive</h1>
+                </div>
+                <div class="right_main_part2">
+                    <div>
+                        <h1>Hi, I’m Editorial<br> by HTML5 UP</h1>
+                        <h3>A FREE AND FULLY RESPONSIVE SITE TEMPLATE</h3>
+                        <p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+                        <button>LEARN MORE</button>
+                    </div>
+                    <div><img src="img/rightpart1.jpeg" alt=""></div>
+                </div>
+                <div class="right_main_part3">
+                    <h1>Erat lacinia</h1>
+                    <div>
+                        <article>
+                            <div class="diamond"><i class="fa">&#xf06c;</i></div>
+                            <div>
+                                <h2>Portitor ullamcorper</h2>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="diamond"><i class="fa">&#xf004;</i></div>
+                            <div>
+                                <h2>Sapien veroeros</h2>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="diamond"><i class="fa">&#xf11b;</i></div>
+                            <div>
+                                <h2>Quam lorem ipsum</h2>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            </div>
+                        </article>
+                        <article>
+                            <div class="diamond"><i class="fa">&#xf025;</i></div>
+                            <div>
+                                <h2>Sed magna finibus</h2>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="right_main_part4">
+                    <h1>Ipsum sed dolor</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="javascript:;"><img src="img/rightpart401.jpg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                            <td>
+                                <a href="javascript:;"><img src="img/rightpart402.jpeg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                            <td class="lastCol">
+                                <a href="javascript:;"><img src="img/rightpart403.jpg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                        </tr>
+                        <tr class="lastrow">
+                            <td>
+                                <a href="javascript:;"><img src="img/rightpart404.jpg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                            <td>
+                                <a href="javascript:;"><img src="img/rightpart405.jpeg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                            <td  class="lastCol">
+                                <a href="javascript:;"><img src="img/rightpart406.jpg" alt=""></a>
+                                <h3>Interdum aenean</h3>
+                                <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+                                <button>MORE</button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
