左边栏滚动到指定位置固定

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="javascript:;">lead1</a></li>
                 <li><a href="javascript:;">lead1</a></li>
             </ul>
+            <!-- 当前滚动距离:<span></span> -->
         </div>
         <div class="container">
         <div class="leftBox">
